--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,20 +39,27 @@ jobs:
           echo Add other actions to build,
           echo test, and deploy your project.
 
-#       # - name: Log into GitHub Container Registry
-#       #   run: echo "${{ secrets.CR_PAT }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
-#       - name: Login to GitHub Container Registry
-#         uses: docker/login-action@v1.4.0
-#         with:
-#           registry: ghcr.io
-#           username: ${{ github.repository_owner }}
-#           password: ${{ secrets.CR_PAT }}
+      # # - name: Log into GitHub Container Registry
+      # #   run: echo "${{ secrets.CR_PAT }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
+      # - name: Login to GitHub Container Registry
+      #   uses: docker/login-action@v1.4.0
+      #   with:
+      #     registry: ghcr.io
+      #     username: ${{ github.repository_owner }}
+      #     password: ${{ secrets.CR_PAT }}
 
-#       - name: Login to DockerHub
-#         uses: docker/login-action@v1
-#         with:
-#           username: ${{ secrets.DOCKERHUB_USERNAME }}
-#           password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build the Docker image
         run: docker build . --file Dockerfile.ubuntu.novnc --tag $DOCKER_IMAGE_NAME
+
+      - name: Push Docker image to DockerHub Registry
+        run: |
+          IMAGE_ID=${{ secrets.DOCKERHUB_USERNAME }}/$DOCKER_IMAGE_NAME:$GLOBAL_IMAGE_VERSION
+          echo IMAGE_ID=$IMAGE_ID
+          docker tag $DOCKER_IMAGE_NAME $IMAGE_ID
+          docker push $IMAGE_ID
